<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/tv_set_image"
            android:layout_width="wrap_content"
            android:layout_height="210dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_gravity="center_horizontal"
            android:src="@android:color/darker_gray"
            android:contentDescription="@string/detail_photo" />

        <TextView
            android:id="@+id/tv_set_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="30dp"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:text="@string/animal_name" />

        <TextView
            android:id="@+id/tv_set_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="30dp"
            android:lineSpacingExtra="2sp"
            android:text="@string/detail"
            android:textColor="@color/primary_text" />
    </LinearLayout>
</ScrollView>